--- a/coc-settings.json
+++ b/coc-settings.json
@@ -10,5 +10,6 @@
   "javascript.suggest.autoImports": true,
   "typescript.suggest.autoImports": true,
   "tsserver.formatOnType": true,
-  "coc.preferences.formatOnType": true
+  "coc.preferences.formatOnType": true,
+  "elixir.pathToElixirLS": "~/.elixir-ls/release/language_server.sh"
 }
